bug fixes: add spacing before github and skills sections #4

--- a/styles.css
+++ b/styles.css
@@ -330,6 +330,10 @@ h6 {
 
 /* skills section */
 
+#skills {
+    margin-top: 70px;
+}
+
 .skill-item {
     margin-bottom: 30px;
 }
@@ -362,6 +366,7 @@ h6 {
     padding: 30px;
     box-shadow: var(--shadow-md);
     transition: var(--transition);
+    margin-top: 80px;
 }
 
 .github-section:hover {
@@ -422,6 +427,10 @@ h6 {
     border-radius: var(--border-radius-md);
     padding: 30px;
     box-shadow: var(--shadow-md);
+}
+
+#contact {
+    margin-top: 70px;
 }
 
 
